# llm-retrieval-eval

./: .env.template  README.md  gen_charts.py  gen_data.py  gen_metrics.py  prompt.md  pyproject.toml  retrieval_test.py
accuracy_data/: ai21-jamba-1-5-large-10000c-10-10runs.json  ai21-jamba-1-5-large-10000c-100-10runs.json  ai21-jamba-1-5-large-10000c-50-10runs.json  ai21-jamba-1-5-large-1000c-10-20runs.json  ai21-jamba-1-5-large-1000c-100-10runs.json  ai21-jamba-1-5-large-1000c-50-10runs.json  ai21-jamba-1-5-large-5000c-10-10runs.json  ai21-jamba-1-5-large-5000c-100-10runs.json  ai21-jamba-1-5-large-5000c-50-10runs.json  ai21-jamba-1-5-mini-1000c-10-20runs.json  claude-3-5-haiku-20241022-1000c-10-20runs.json  claude-3-5-haiku-20241022-1000c-100-20runs.json  claude-3-5-haiku-20241022-1000c-50-20runs.json  claude-3-5-haiku-20241022-5000c-10-20runs.json  claude-3-5-haiku-20241022-5000c-100-20runs.json  claude-3-5-haiku-20241022-5000c-50-20runs.json  claude-3-5-haiku-20241022-8000c-10-20runs.json  claude-3-5-haiku-20241022-8000c-100-20runs.json  claude-3-5-haiku-20241022-8000c-50-20runs.json  claude-3-5-sonnet-20241022-1000c-10-20runs.json  claude-3-5-sonnet-20241022-1000c-100-20runs.json  claude-3-5-sonnet-20241022-1000c-50-20runs.json  claude-3-5-sonnet-20241022-5000c-10-20runs.json  claude-3-5-sonnet-20241022-5000c-100-20runs.json  claude-3-5-sonnet-20241022-5000c-50-20runs.json  claude-3-5-sonnet-20241022-8000c-10-20runs.json  claude-3-5-sonnet-20241022-8000c-100-20runs.json  claude-3-5-sonnet-20241022-8000c-50-20runs.json  claude-3-opus-20240229-1000c-10-20runs.json  (+92 more)
(+287 files in other folders)
