[tool.poetry]
name = "how-lost-in-the-middle"
version = "0.1.0"
description = ""
authors = ["y-c-mak <mak@ariagato.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
google-generativeai = "^0.8.3"
openai = "^1.53.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
together = "^1.3.3"
anthropic = "^0.39.0"
scikit-learn = "^1.5.2"
boto3 = "^1.35.76"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
